Task: Linked sections to nav links. Bug: On mobile, when navlink is clicked nav will close. Task: Added hover state for hero-content buttons.

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ html {
   font-size: 1em;
   line-height: 1.4;
   min-width: 320px;
+  scroll-behavior: smooth;
 }
 body
 {
@@ -163,6 +164,17 @@ header h1
   font-weight: 700;
 }
 
+.hero-content .btn a{
+  text-decoration: none;
+  color: #010D26;
+}
+
+
+
+.hero-content .btn:hover
+{
+ background-color: #F4FAFF;
+}
 
 /*Pricing styles*/
 
